[fix] datatables filter on mobile

--- a/memberaudit/static/memberaudit/css/memberaudit.css
+++ b/memberaudit/static/memberaudit/css/memberaudit.css
@@ -38,15 +38,17 @@
         margin-bottom: 1rem;
     }
 
-    .dataTables_wrapper > .form-inline select:first-child {
-        margin-left: 1rem;
-    }
-
     .dataTables_wrapper > .form-inline select:last-child {
         margin-right: 0;
     }
 
     .dataTables_length select {
         margin: 0 1rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .dataTables_wrapper > .form-inline select:first-child {
+        margin-left: 1rem;
     }
 }
